Dialogue Implemented on Everyone
Dialogue Implemented on Everyone

--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -203,7 +203,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/Forest
+LastLevel=/Game/Levels/Bubbleopolis
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -212,30 +212,31 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/MushroomBoys/Mush1/Mush1.Mush1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/Forest
-MRUItem1=/Game/Gnome_Animated/FallGnome/Spring_Gnome
-MRUItem2=/Game/Levels/Bubbleopolis
-MRUItem3=/Game/MushroomBoys/Mush3/Mush3
-MRUItem4=/Game/Animation/Character/Throw_MC_Anim_mixamo_com
-MRUItem5=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem6=/Game/Player/PlayerCharacter
-MRUItem7=/Game/Player/Player_BP
-MRUItem8=/Game/MushroomBoys/Mush1/Mush1
-MRUItem9=/Game/Materials/Materials/Mat_Leaves
-MRUItem10=/Game/ParticleSystems/P_FallingLeaves
-MRUItem11=/Game/ChefHatHouse/M_ChefHatHouse
-MRUItem12=/Game/ChefHatHouse/ChefHOuseV2
-MRUItem13=/Game/Pumpkin_House/Pumpkin_House_LP
-MRUItem14=/Game/Mushroom_House/MushroomHouse__1_
-MRUItem15=/Game/Water_Can_House/Watering_Can_House_LP_Watering_Can_House_UV
-MRUItem16=/Game/Water_Can_House/Watering_Can1
-MRUItem17=/Game/Levels/Sewer
-MRUItem18=/Game/Mushroom_House/lambert11
-MRUItem19=/Game/Mushroom_House/lambert12
+MRUItem0=/Game/MushroomBoys/Mush5/Mush5
+MRUItem1=/Game/Dialogue/DialogueWidget
+MRUItem2=/Game/Dialogue/Interact_Interface
+MRUItem3=/Game/MushroomBoys/Mush4/Mush4
+MRUItem4=/Game/MushroomBoys/Mush3/Mush3
+MRUItem5=/Game/MushroomBoys/Mush2/Mush2_
+MRUItem6=/Game/MushroomBoys/Mush1/Mush1
+MRUItem7=/Game/Gnome_Animated/WinterGnome/Winter_Gnome
+MRUItem8=/Game/Gnome_Animated/SpringGnome/Spring_Gnome
+MRUItem9=/Game/Gnome_Animated/MushGnome/Mush_Gnome
+MRUItem10=/Game/Levels/Bubbleopolis
+MRUItem11=/Game/Gnome_Animated/ChefGnome/ChefGnome
+MRUItem12=/Game/Levels/Forest
+MRUItem13=/Game/Gnome_Animated/FallGnome/Spring_Gnome
+MRUItem14=/Game/Animation/Character/Throw_MC_Anim_mixamo_com
+MRUItem15=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem16=/Game/Player/PlayerCharacter
+MRUItem17=/Game/Player/Player_BP
+MRUItem18=/Game/Materials/Materials/Mat_Leaves
+MRUItem19=/Game/ParticleSystems/P_FallingLeaves
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -2378,6 +2379,72 @@ Mush2Pedestal1_C.Default=True
 FileMediaSource.File=True
 FileMediaSource.Platforms=True
 SoundNodeLooping.Looping=True
+Mush_Gnome_C.TransformCommon=True
+Mush_Gnome_C.Animation=True
+Mush_Gnome_C.Mesh=True
+Mush_Gnome_C.Physics=True
+Mush_Gnome_C.Clothing=True
+Mush_Gnome_C.MasterPoseComponent=True
+Mush_Gnome_C.Lighting=True
+Mush_Gnome_C.ClothingSimulation=True
+Mush_Gnome_C.SkinWeights=True
+Mush_Gnome_C.Navigation=True
+Mush_Gnome_C.VirtualTexture=True
+Mush_Gnome_C.Tags=True
+Mush_Gnome_C.Activation=True
+Mush_Gnome_C.Cooking=True
+Mush_Gnome_C.Character Movement (General Settings)=True
+Mush_Gnome_C.Character Movement: Walking=True
+Mush_Gnome_C.Character Movement: Jumping / Falling=True
+Mush_Gnome_C.Character Movement (Networking)=True
+Mush_Gnome_C.Character Movement: Swimming=True
+Mush_Gnome_C.Character Movement: Flying=True
+Mush_Gnome_C.Character Movement: Custom Movement=True
+Mush_Gnome_C.Character Movement (Rotation Settings)=True
+Mush_Gnome_C.Character Movement: Physics Interaction=True
+Mush_Gnome_C.Character Movement=True
+Mush_Gnome_C.Character Movement: Avoidance=True
+Mush_Gnome_C.RootMotion=True
+Mush_Gnome_C.Character Movement: NavMesh Movement=True
+Mush_Gnome_C.NavMovement=True
+Mush_Gnome_C.Velocity=True
+Mush_Gnome_C.PlanarMovement=True
+Mush_Gnome_C.MovementComponent=True
+Mush_Gnome_C.Shape=True
+Mush_Gnome_C.Materials=True
+Winter_Gnome_C.TransformCommon=True
+Winter_Gnome_C.Animation=True
+Winter_Gnome_C.Mesh=True
+Winter_Gnome_C.Physics=True
+Winter_Gnome_C.Clothing=True
+Winter_Gnome_C.MasterPoseComponent=True
+Winter_Gnome_C.Lighting=True
+Winter_Gnome_C.ClothingSimulation=True
+Winter_Gnome_C.SkinWeights=True
+Winter_Gnome_C.Navigation=True
+Winter_Gnome_C.VirtualTexture=True
+Winter_Gnome_C.Tags=True
+Winter_Gnome_C.Activation=True
+Winter_Gnome_C.Cooking=True
+Winter_Gnome_C.Character Movement (General Settings)=True
+Winter_Gnome_C.Character Movement: Walking=True
+Winter_Gnome_C.Character Movement: Jumping / Falling=True
+Winter_Gnome_C.Character Movement (Networking)=True
+Winter_Gnome_C.Character Movement: Swimming=True
+Winter_Gnome_C.Character Movement: Flying=True
+Winter_Gnome_C.Character Movement: Custom Movement=True
+Winter_Gnome_C.Character Movement (Rotation Settings)=True
+Winter_Gnome_C.Character Movement: Physics Interaction=True
+Winter_Gnome_C.Character Movement=True
+Winter_Gnome_C.Character Movement: Avoidance=True
+Winter_Gnome_C.RootMotion=True
+Winter_Gnome_C.Character Movement: NavMesh Movement=True
+Winter_Gnome_C.NavMovement=True
+Winter_Gnome_C.Velocity=True
+Winter_Gnome_C.PlanarMovement=True
+Winter_Gnome_C.MovementComponent=True
+Winter_Gnome_C.Shape=True
+Winter_Gnome_C.Materials=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
@@ -2469,17 +2536,21 @@ EdGraphNode=
 AnimGraphNode_BlendSpacePlayer="\"Object.Settings.SyncGroup\" "
 AnimGraphNode_BlendSpaceBase="\"Object.Settings.SyncGroup\" "
 Soap_Character_C="\"Object.Actor.PivotOffset\" "
-ChefGnome_C="\"Object.Actor.PivotOffset\" "
+ChefGnome_C="\"Object.Radius\" "
 Spring_Gnome_C="\"Object.Actor.PivotOffset\" "
 Mush_Gnome_C="\"Object.Actor.PivotOffset\" "
 Lever_C=
 CapsuleComponent=
 Mush3Pedestal_C=
 Mush1Pedestal_C=
-Mush3_C=
-Mush1_C="\"Object.Actor.PivotOffset\" "
+Mush3_C="\"Object.Actor.PivotOffset\" "
+Mush1_C=
 Player_BP_C="\"Object.ThrowingPaint\" "
 AnimInstance="\"Object.ThrowingPaint\" "
+Winter_Gnome_C="\"Object.Actor.PivotOffset\" "
+Mush2__C="\"Object.DialogueWidget2\" "
+Mush4_C="\"Object.Actor.PivotOffset\" "
+Mush5_C="\"Object.Actor.PivotOffset\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Audio/Bubbleopolis_MAster.Bubbleopolis_Master=1
@@ -2842,6 +2913,7 @@ None=======
 /Game/ParticleSystems/P_FallingLeaves.P_FallingLeaves=1
 /Game/Materials/Materials/Mat_Leaves.Mat_Leaves=1
 /Game/Animation/Character/Throw_MC_Anim_mixamo_com.Throw_MC_Anim_mixamo_com=1
+/Game/Gnome_Animated/FallGnome/Fall_Gnome.Fall_Gnome=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -4495,8 +4567,8 @@ DataTableEditor.TimeStamp=2021.02.06-01.28.01
 DataTableEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/Forest
-MRUItem1=/Game/Levels/Bubbleopolis
+MRUItem0=/Game/Levels/Bubbleopolis
+MRUItem1=/Game/Levels/Forest
 MRUItem2=/Game/Levels/Sewer
 MRUItem3=/Game/Levels/MainMenu
 MRUItem4=/Game/Levels/testYellow
@@ -4510,7 +4582,7 @@ MRUItem11=/Game/Levels/NewWorld
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=MapCheck
+LastLogListing=PIE
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
@@ -4863,20 +4935,20 @@ Tree5Movable_C=
 MovableAxe_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 AxeInteractLog_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 Mush3Pedestal_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
-Spring_Gnome_C=BoxComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
+Spring_Gnome_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 PropertyWrapper=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
-ChefGnome_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
+ChefGnome_C=
 DialogueGetLine=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
 DialogueGetLine_6=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
-DialogueWidget_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
-Mush1_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
+DialogueWidget_C=
+Mush1_C=
 DialogueCreate_4=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
 DialogueCreate=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
 Dialogue Get Line=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
 Dialogue Get Line_5=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
 Mush2__C=
 DialogueGetLine_5=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
-Mush3_C=
+Mush3_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
 Mush5_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
 SewerBoat_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
 Lever_C=
@@ -4896,8 +4968,20 @@ Mush1Pedestal_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent
 Forest_C=
 Mush2Pedestal1_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 DisappearBridge3_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
+Winter_Gnome_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
+Mush_Gnome_C=
+Mush4_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
 
 [PlacementMode]
+RecentlyPlaced=/Game/MushroomBoys/Mush1/Mush1.Mush1;
+RecentlyPlaced=/Game/MushroomBoys/Mush5/Mush5.Mush5;
+RecentlyPlaced=/Game/MushroomBoys/Mush4/Mush4.Mush4;
+RecentlyPlaced=/Game/MushroomBoys/Mush3/Mush3.Mush3;
+RecentlyPlaced=/Game/MushroomBoys/Mush2/Mush2_.Mush2_;
+RecentlyPlaced=/Game/Gnome_Animated/WinterGnome/Winter_Gnome.Winter_Gnome;
+RecentlyPlaced=/Game/Gnome_Animated/SpringGnome/Spring_Gnome.Spring_Gnome;
+RecentlyPlaced=/Game/Gnome_Animated/MushGnome/Mush_Gnome.Mush_Gnome;
+RecentlyPlaced=/Game/Gnome_Animated/ChefGnome/ChefGnome.ChefGnome;
 RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/Mushroom_House/MushroomHouse__1_.MushroomHouse__1_;
@@ -4909,15 +4993,6 @@ RecentlyPlaced=/Game/Water_Can_House/Watering_Can_House_LP_Flower_One6.Watering_
 RecentlyPlaced=/Game/Water_Can_House/Watering_Can_House_LP_Flower_One5.Watering_Can_House_LP_Flower_One5;
 RecentlyPlaced=/Game/Water_Can_House/Watering_Can_House_LP_Flower_One4.Watering_Can_House_LP_Flower_One4;
 RecentlyPlaced=/Game/Water_Can_House/Watering_Can_House_LP_Flower_One3.Watering_Can_House_LP_Flower_One3;
-RecentlyPlaced=/Game/Water_Can_House/Watering_Can_House_LP_Flower_One2.Watering_Can_House_LP_Flower_One2;
-RecentlyPlaced=/Game/Water_Can_House/Watering_Can_House_LP_Daisy_LP4.Watering_Can_House_LP_Daisy_LP4;
-RecentlyPlaced=/Game/Water_Can_House/Watering_Can_House_LP_Daisy_LP3.Watering_Can_House_LP_Daisy_LP3;
-RecentlyPlaced=/Game/Water_Can_House/Watering_Can_House_LP_Daisy_LP2.Watering_Can_House_LP_Daisy_LP2;
-RecentlyPlaced=/Game/ApplePickUp/ApplePickUp.ApplePickUp;
-RecentlyPlaced=/Game/WoodenCart/WoodenCart.WoodenCart;
-RecentlyPlaced=/Game/Water_Can_House/Watering_Can_House_LP.Watering_Can_House_LP;
-RecentlyPlaced=/Game/ChefHatHouse/ChefHOuseV2.ChefHOuseV2;
-RecentlyPlaced=/Game/Pumpkin_House/Pumpkin_House_LP.Pumpkin_House_LP;
 None=======
 BoxComponent=BoxComponent.Collision.Collision,
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
