--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -150,7 +150,7 @@ Synth=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/Bubble_Tree
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -203,7 +203,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/Bubbleopolis
+LastLevel=/Game/Levels/MainMenu
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -212,31 +212,30 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/MushroomBoys/Mush1/Mush1.Mush1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MushroomBoys/Mush5/Mush5
-MRUItem1=/Game/Dialogue/DialogueWidget
-MRUItem2=/Game/Dialogue/Interact_Interface
-MRUItem3=/Game/MushroomBoys/Mush4/Mush4
-MRUItem4=/Game/MushroomBoys/Mush3/Mush3
-MRUItem5=/Game/MushroomBoys/Mush2/Mush2_
-MRUItem6=/Game/MushroomBoys/Mush1/Mush1
-MRUItem7=/Game/Gnome_Animated/WinterGnome/Winter_Gnome
-MRUItem8=/Game/Gnome_Animated/SpringGnome/Spring_Gnome
-MRUItem9=/Game/Gnome_Animated/MushGnome/Mush_Gnome
-MRUItem10=/Game/Levels/Bubbleopolis
-MRUItem11=/Game/Gnome_Animated/ChefGnome/ChefGnome
-MRUItem12=/Game/Levels/Forest
-MRUItem13=/Game/Gnome_Animated/FallGnome/Spring_Gnome
-MRUItem14=/Game/Animation/Character/Throw_MC_Anim_mixamo_com
-MRUItem15=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem16=/Game/Player/PlayerCharacter
-MRUItem17=/Game/Player/Player_BP
-MRUItem18=/Game/Materials/Materials/Mat_Leaves
-MRUItem19=/Game/ParticleSystems/P_FallingLeaves
+MRUItem0=/Game/Bubble_Tree/Bubble_Tree_LP
+MRUItem1=/Game/BookCase/Bookcase
+MRUItem2=/Game/MushroomBoys/Mush1/Mush1
+MRUItem3=/Game/MushroomBoys/Mush5/Mush5
+MRUItem4=/Game/Dialogue/DialogueWidget
+MRUItem5=/Game/Dialogue/Interact_Interface
+MRUItem6=/Game/MushroomBoys/Mush4/Mush4
+MRUItem7=/Game/MushroomBoys/Mush3/Mush3
+MRUItem8=/Game/MushroomBoys/Mush2/Mush2_
+MRUItem9=/Game/Gnome_Animated/WinterGnome/Winter_Gnome
+MRUItem10=/Game/Gnome_Animated/SpringGnome/Spring_Gnome
+MRUItem11=/Game/Gnome_Animated/MushGnome/Mush_Gnome
+MRUItem12=/Game/Levels/Bubbleopolis
+MRUItem13=/Game/Gnome_Animated/ChefGnome/ChefGnome
+MRUItem14=/Game/Levels/Forest
+MRUItem15=/Game/Gnome_Animated/FallGnome/Spring_Gnome
+MRUItem16=/Game/Animation/Character/Throw_MC_Anim_mixamo_com
+MRUItem17=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem18=/Game/Player/PlayerCharacter
+MRUItem19=/Game/Player/Player_BP
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -2544,7 +2543,7 @@ CapsuleComponent=
 Mush3Pedestal_C=
 Mush1Pedestal_C=
 Mush3_C="\"Object.Actor.PivotOffset\" "
-Mush1_C=
+Mush1_C="\"Object.Actor.PivotOffset\" "
 Player_BP_C="\"Object.ThrowingPaint\" "
 AnimInstance="\"Object.ThrowingPaint\" "
 Winter_Gnome_C="\"Object.Actor.PivotOffset\" "
@@ -2914,6 +2913,7 @@ None=======
 /Game/Materials/Materials/Mat_Leaves.Mat_Leaves=1
 /Game/Animation/Character/Throw_MC_Anim_mixamo_com.Throw_MC_Anim_mixamo_com=1
 /Game/Gnome_Animated/FallGnome/Fall_Gnome.Fall_Gnome=1
+/Game/Bubble_Tree/Bubble_Tree_LP.Bubble_Tree_LP=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -2998,7 +2998,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=C:/Users/Tay/Desktop/Sero_Git_/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=C:/Users/jbdav/Documents/GitHub/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -4567,10 +4567,10 @@ DataTableEditor.TimeStamp=2021.02.06-01.28.01
 DataTableEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/Bubbleopolis
-MRUItem1=/Game/Levels/Forest
-MRUItem2=/Game/Levels/Sewer
-MRUItem3=/Game/Levels/MainMenu
+MRUItem0=/Game/Levels/MainMenu
+MRUItem1=/Game/Levels/Bubbleopolis
+MRUItem2=/Game/Levels/Forest
+MRUItem3=/Game/Levels/Sewer
 MRUItem4=/Game/Levels/testYellow
 MRUItem5=/Game/Levels/NewSewer
 MRUItem6=/Game/Levels/NewMap
@@ -4582,7 +4582,7 @@ MRUItem11=/Game/Levels/NewWorld
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=PIE
+LastLogListing=LoadErrors
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
@@ -5267,7 +5267,7 @@ bSCCUseGlobalSettings=False
 bAutomaticallyCheckoutOnAssetModification=False
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
 bForceCompilationAtStartup=False
-bRestoreOpenAssetTabsOnRestart=False
+bRestoreOpenAssetTabsOnRestart=True
 bMonitorContentDirectories=True
 AutoReimportThreshold=3.000000
 bAutoCreateAssets=True
