forest edits and bp edit
Merged watering can
disable camera switching
drawbridge replaced with static
color switch changed to q

--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -150,7 +150,7 @@ Synth=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game/Bubble_Tree
+ContentBrowserTab1.SelectedPaths=/Game
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -172,7 +172,7 @@ ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
-ContentBrowserTab1.ThumbnailSizeScale=0.250000
+ContentBrowserTab1.ThumbnailSizeScale=0.000000
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000
 SequenceBrowser.ActiveTypeFilters=
@@ -203,7 +203,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/MainMenu
+LastLevel=/Game/Levels/Forest
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -214,26 +214,27 @@ ToolbarOpenBPClass.CurrentViewType=0
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Bubble_Tree/Bubble_Tree_LP
-MRUItem1=/Game/BookCase/Bookcase
-MRUItem2=/Game/MushroomBoys/Mush1/Mush1
-MRUItem3=/Game/MushroomBoys/Mush5/Mush5
-MRUItem4=/Game/Dialogue/DialogueWidget
-MRUItem5=/Game/Dialogue/Interact_Interface
-MRUItem6=/Game/MushroomBoys/Mush4/Mush4
-MRUItem7=/Game/MushroomBoys/Mush3/Mush3
-MRUItem8=/Game/MushroomBoys/Mush2/Mush2_
-MRUItem9=/Game/Gnome_Animated/WinterGnome/Winter_Gnome
-MRUItem10=/Game/Gnome_Animated/SpringGnome/Spring_Gnome
-MRUItem11=/Game/Gnome_Animated/MushGnome/Mush_Gnome
-MRUItem12=/Game/Levels/Bubbleopolis
-MRUItem13=/Game/Gnome_Animated/ChefGnome/ChefGnome
-MRUItem14=/Game/Levels/Forest
-MRUItem15=/Game/Gnome_Animated/FallGnome/Spring_Gnome
-MRUItem16=/Game/Animation/Character/Throw_MC_Anim_mixamo_com
-MRUItem17=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem1=/Game/Levels/Forest
+MRUItem2=/Game/Bubble_Tree/Bubble_Tree_LP
+MRUItem3=/Game/BookCase/Bookcase
+MRUItem4=/Game/MushroomBoys/Mush1/Mush1
+MRUItem5=/Game/MushroomBoys/Mush5/Mush5
+MRUItem6=/Game/Dialogue/DialogueWidget
+MRUItem7=/Game/Dialogue/Interact_Interface
+MRUItem8=/Game/MushroomBoys/Mush4/Mush4
+MRUItem9=/Game/MushroomBoys/Mush3/Mush3
+MRUItem10=/Game/MushroomBoys/Mush2/Mush2_
+MRUItem11=/Game/Gnome_Animated/WinterGnome/Winter_Gnome
+MRUItem12=/Game/Gnome_Animated/SpringGnome/Spring_Gnome
+MRUItem13=/Game/Gnome_Animated/MushGnome/Mush_Gnome
+MRUItem14=/Game/Levels/Bubbleopolis
+MRUItem15=/Game/Gnome_Animated/ChefGnome/ChefGnome
+MRUItem16=/Game/Gnome_Animated/FallGnome/Spring_Gnome
+MRUItem17=/Game/Animation/Character/Throw_MC_Anim_mixamo_com
 MRUItem18=/Game/Player/PlayerCharacter
 MRUItem19=/Game/Player/Player_BP
 
@@ -2452,9 +2453,9 @@ SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 ThirdPersonCharacter_C=
 Character="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
-Character="\"Object.Actor.PivotOffset\" "
+Character=
 Pawn="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
-Pawn="\"Object.Actor.PivotOffset\" "
+Pawn=
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 Info=
@@ -2979,7 +2980,7 @@ bHideUnrelatedNodes=False
 ScreenPosition=X=624.000 Y=235.000
 ScreenPosition=X=236.000 Y=55.000
 WindowSize=X=1305.000 Y=745.000
-WindowSize=X=1440.000 Y=804.000
+WindowSize=X=1445.000 Y=809.000
 None=======
 InitiallyMaximized=True
 
@@ -2998,7 +2999,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=C:/Users/jbdav/Documents/GitHub/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=D:/ihatethis/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -4567,9 +4568,9 @@ DataTableEditor.TimeStamp=2021.02.06-01.28.01
 DataTableEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/MainMenu
-MRUItem1=/Game/Levels/Bubbleopolis
-MRUItem2=/Game/Levels/Forest
+MRUItem0=/Game/Levels/Forest
+MRUItem1=/Game/Levels/MainMenu
+MRUItem2=/Game/Levels/Bubbleopolis
 MRUItem3=/Game/Levels/Sewer
 MRUItem4=/Game/Levels/testYellow
 MRUItem5=/Game/Levels/NewSewer
@@ -4582,7 +4583,7 @@ MRUItem11=/Game/Levels/NewWorld
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=LoadErrors
+LastLogListing=MapCheck
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
@@ -4973,18 +4974,8 @@ Mush_Gnome_C=
 Mush4_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
 
 [PlacementMode]
-RecentlyPlaced=/Game/MushroomBoys/Mush1/Mush1.Mush1;
-RecentlyPlaced=/Game/MushroomBoys/Mush5/Mush5.Mush5;
-RecentlyPlaced=/Game/MushroomBoys/Mush4/Mush4.Mush4;
-RecentlyPlaced=/Game/MushroomBoys/Mush3/Mush3.Mush3;
-RecentlyPlaced=/Game/MushroomBoys/Mush2/Mush2_.Mush2_;
-RecentlyPlaced=/Game/Gnome_Animated/WinterGnome/Winter_Gnome.Winter_Gnome;
-RecentlyPlaced=/Game/Gnome_Animated/SpringGnome/Spring_Gnome.Spring_Gnome;
-RecentlyPlaced=/Game/Gnome_Animated/MushGnome/Mush_Gnome.Mush_Gnome;
-RecentlyPlaced=/Game/Gnome_Animated/ChefGnome/ChefGnome.ChefGnome;
-RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
-RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
-RecentlyPlaced=/Game/Mushroom_House/MushroomHouse__1_.MushroomHouse__1_;
+RecentlyPlaced=/Game/Drawbridge/Drawbridge.Drawbridge;/Engine/Transient.ActorFactoryStaticMesh_0
+RecentlyPlaced=/Game/Water_Can_House/SM_MERGED_Watering_Can_House_LP_Watering_Can_House_UV2_35.SM_MERGED_Watering_Can_House_LP_Watering_Can_House_UV2_35;/Engine/Transient.ActorFactoryStaticMesh_0
 RecentlyPlaced=/Game/Water_Can_House/Watering_Can_House_LP_Watering_Can_House_UV.Watering_Can_House_LP_Watering_Can_House_UV;
 RecentlyPlaced=/Game/Water_Can_House/Watering_Can_House_LP_Sunflower_Low2.Watering_Can_House_LP_Sunflower_Low2;
 RecentlyPlaced=/Game/Water_Can_House/Watering_Can_House_LP_Sunflower_Low1.Watering_Can_House_LP_Sunflower_Low1;
@@ -4993,6 +4984,16 @@ RecentlyPlaced=/Game/Water_Can_House/Watering_Can_House_LP_Flower_One6.Watering_
 RecentlyPlaced=/Game/Water_Can_House/Watering_Can_House_LP_Flower_One5.Watering_Can_House_LP_Flower_One5;
 RecentlyPlaced=/Game/Water_Can_House/Watering_Can_House_LP_Flower_One4.Watering_Can_House_LP_Flower_One4;
 RecentlyPlaced=/Game/Water_Can_House/Watering_Can_House_LP_Flower_One3.Watering_Can_House_LP_Flower_One3;
+RecentlyPlaced=/Game/Water_Can_House/Watering_Can_House_LP_Flower_One2.Watering_Can_House_LP_Flower_One2;
+RecentlyPlaced=/Game/Water_Can_House/Watering_Can_House_LP_Daisy_LP4.Watering_Can_House_LP_Daisy_LP4;
+RecentlyPlaced=/Game/Water_Can_House/Watering_Can_House_LP_Daisy_LP3.Watering_Can_House_LP_Daisy_LP3;
+RecentlyPlaced=/Game/Water_Can_House/Watering_Can_House_LP_Daisy_LP2.Watering_Can_House_LP_Daisy_LP2;
+RecentlyPlaced=/Game/MushroomBoys/Mush1/Mush1.Mush1;
+RecentlyPlaced=/Game/MushroomBoys/Mush5/Mush5.Mush5;
+RecentlyPlaced=/Game/MushroomBoys/Mush4/Mush4.Mush4;
+RecentlyPlaced=/Game/MushroomBoys/Mush3/Mush3.Mush3;
+RecentlyPlaced=/Game/MushroomBoys/Mush2/Mush2_.Mush2_;
+RecentlyPlaced=/Game/Gnome_Animated/WinterGnome/Winter_Gnome.Winter_Gnome;
 None=======
 BoxComponent=BoxComponent.Collision.Collision,
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
