--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -203,7 +203,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/Forest
+LastLevel=/Game/Levels/MainMenu
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -212,31 +212,31 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem1=/Game/Levels/Forest
-MRUItem2=/Game/Bubble_Tree/Bubble_Tree_LP
-MRUItem3=/Game/BookCase/Bookcase
-MRUItem4=/Game/MushroomBoys/Mush1/Mush1
-MRUItem5=/Game/MushroomBoys/Mush5/Mush5
-MRUItem6=/Game/Dialogue/DialogueWidget
-MRUItem7=/Game/Dialogue/Interact_Interface
-MRUItem8=/Game/MushroomBoys/Mush4/Mush4
-MRUItem9=/Game/MushroomBoys/Mush3/Mush3
-MRUItem10=/Game/MushroomBoys/Mush2/Mush2_
-MRUItem11=/Game/Gnome_Animated/WinterGnome/Winter_Gnome
-MRUItem12=/Game/Gnome_Animated/SpringGnome/Spring_Gnome
-MRUItem13=/Game/Gnome_Animated/MushGnome/Mush_Gnome
-MRUItem14=/Game/Levels/Bubbleopolis
-MRUItem15=/Game/Gnome_Animated/ChefGnome/ChefGnome
-MRUItem16=/Game/Gnome_Animated/FallGnome/Spring_Gnome
-MRUItem17=/Game/Animation/Character/Throw_MC_Anim_mixamo_com
-MRUItem18=/Game/Player/PlayerCharacter
-MRUItem19=/Game/Player/Player_BP
+MRUItem0=/Game/Blueprints/UI/Widgets/MainMenu
+MRUItem1=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem2=/Game/Levels/Forest
+MRUItem3=/Game/Bubble_Tree/Bubble_Tree_LP
+MRUItem4=/Game/BookCase/Bookcase
+MRUItem5=/Game/MushroomBoys/Mush1/Mush1
+MRUItem6=/Game/MushroomBoys/Mush5/Mush5
+MRUItem7=/Game/Dialogue/DialogueWidget
+MRUItem8=/Game/Dialogue/Interact_Interface
+MRUItem9=/Game/MushroomBoys/Mush4/Mush4
+MRUItem10=/Game/MushroomBoys/Mush3/Mush3
+MRUItem11=/Game/MushroomBoys/Mush2/Mush2_
+MRUItem12=/Game/Gnome_Animated/WinterGnome/Winter_Gnome
+MRUItem13=/Game/Gnome_Animated/SpringGnome/Spring_Gnome
+MRUItem14=/Game/Gnome_Animated/MushGnome/Mush_Gnome
+MRUItem15=/Game/Levels/Bubbleopolis
+MRUItem16=/Game/Gnome_Animated/ChefGnome/ChefGnome
+MRUItem17=/Game/Gnome_Animated/FallGnome/Spring_Gnome
+MRUItem18=/Game/Animation/Character/Throw_MC_Anim_mixamo_com
+MRUItem19=/Game/Player/PlayerCharacter
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -4583,7 +4583,7 @@ MRUItem11=/Game/Levels/NewWorld
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=MapCheck
+LastLogListing=LoadErrors
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
