forest building puzzle safe guarding
added kill mush trigger
edited level BP
Edited moveable mush1 bp
edited movable mush 2 bp
edited movable mush 3 bp

--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -203,7 +203,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/MainMenu
+LastLevel=/Game/Levels/Forest
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -212,14 +212,13 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/UI/Widgets/MainMenu
-MRUItem1=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem2=/Game/Levels/Forest
+MRUItem0=/Game/Levels/Forest
+MRUItem1=/Game/Blueprints/UI/Widgets/MainMenu
+MRUItem2=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
 MRUItem3=/Game/Bubble_Tree/Bubble_Tree_LP
 MRUItem4=/Game/BookCase/Bookcase
 MRUItem5=/Game/MushroomBoys/Mush1/Mush1
@@ -2980,7 +2979,7 @@ bHideUnrelatedNodes=False
 ScreenPosition=X=624.000 Y=235.000
 ScreenPosition=X=236.000 Y=55.000
 WindowSize=X=1305.000 Y=745.000
-WindowSize=X=1445.000 Y=809.000
+WindowSize=X=1450.000 Y=814.000
 None=======
 InitiallyMaximized=True
 
@@ -4583,7 +4582,7 @@ MRUItem11=/Game/Levels/NewWorld
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=LoadErrors
+LastLogListing=MapCheck
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
