--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -150,7 +150,7 @@ Synth=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -203,7 +203,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/Forest
+LastLevel=/Game/Levels/Bubbleopolis
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -216,22 +216,22 @@ CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/Forest
-MRUItem1=/Game/Blueprints/UI/Widgets/MainMenu
-MRUItem2=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem3=/Game/Bubble_Tree/Bubble_Tree_LP
-MRUItem4=/Game/BookCase/Bookcase
-MRUItem5=/Game/MushroomBoys/Mush1/Mush1
-MRUItem6=/Game/MushroomBoys/Mush5/Mush5
-MRUItem7=/Game/Dialogue/DialogueWidget
-MRUItem8=/Game/Dialogue/Interact_Interface
-MRUItem9=/Game/MushroomBoys/Mush4/Mush4
-MRUItem10=/Game/MushroomBoys/Mush3/Mush3
-MRUItem11=/Game/MushroomBoys/Mush2/Mush2_
-MRUItem12=/Game/Gnome_Animated/WinterGnome/Winter_Gnome
-MRUItem13=/Game/Gnome_Animated/SpringGnome/Spring_Gnome
-MRUItem14=/Game/Gnome_Animated/MushGnome/Mush_Gnome
-MRUItem15=/Game/Levels/Bubbleopolis
+MRUItem0=/Game/Levels/Bubbleopolis
+MRUItem1=/Game/Levels/Forest
+MRUItem2=/Game/Blueprints/UI/Widgets/MainMenu
+MRUItem3=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem4=/Game/Bubble_Tree/Bubble_Tree_LP
+MRUItem5=/Game/BookCase/Bookcase
+MRUItem6=/Game/MushroomBoys/Mush1/Mush1
+MRUItem7=/Game/MushroomBoys/Mush5/Mush5
+MRUItem8=/Game/Dialogue/DialogueWidget
+MRUItem9=/Game/Dialogue/Interact_Interface
+MRUItem10=/Game/MushroomBoys/Mush4/Mush4
+MRUItem11=/Game/MushroomBoys/Mush3/Mush3
+MRUItem12=/Game/MushroomBoys/Mush2/Mush2_
+MRUItem13=/Game/Gnome_Animated/WinterGnome/Winter_Gnome
+MRUItem14=/Game/Gnome_Animated/SpringGnome/Spring_Gnome
+MRUItem15=/Game/Gnome_Animated/MushGnome/Mush_Gnome
 MRUItem16=/Game/Gnome_Animated/ChefGnome/ChefGnome
 MRUItem17=/Game/Gnome_Animated/FallGnome/Spring_Gnome
 MRUItem18=/Game/Animation/Character/Throw_MC_Anim_mixamo_com
@@ -2998,7 +2998,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=D:/ihatethis/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=C:/Users/Tay/Desktop/Sero_Git_/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -4567,9 +4567,9 @@ DataTableEditor.TimeStamp=2021.02.06-01.28.01
 DataTableEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/Forest
-MRUItem1=/Game/Levels/MainMenu
-MRUItem2=/Game/Levels/Bubbleopolis
+MRUItem0=/Game/Levels/Bubbleopolis
+MRUItem1=/Game/Levels/Forest
+MRUItem2=/Game/Levels/MainMenu
 MRUItem3=/Game/Levels/Sewer
 MRUItem4=/Game/Levels/testYellow
 MRUItem5=/Game/Levels/NewSewer
