Forest Level BP changes

--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -150,7 +150,7 @@ Synth=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/UI/Widgets
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -172,7 +172,7 @@ ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
-ContentBrowserTab1.ThumbnailSizeScale=0.000000
+ContentBrowserTab1.ThumbnailSizeScale=0.160714
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000
 SequenceBrowser.ActiveTypeFilters=
@@ -203,7 +203,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/Bubbleopolis
+LastLevel=/Game/Levels/Forest
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -214,28 +214,29 @@ ToolbarOpenBPClass.CurrentViewType=0
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Blueprints/UI/Widgets/HUD6.HUD6
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/Bubbleopolis
+MRUItem0=/Game/Blueprints/UI/Widgets/HUD6
 MRUItem1=/Game/Levels/Forest
-MRUItem2=/Game/Blueprints/UI/Widgets/MainMenu
-MRUItem3=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem4=/Game/Bubble_Tree/Bubble_Tree_LP
-MRUItem5=/Game/BookCase/Bookcase
-MRUItem6=/Game/MushroomBoys/Mush1/Mush1
-MRUItem7=/Game/MushroomBoys/Mush5/Mush5
-MRUItem8=/Game/Dialogue/DialogueWidget
-MRUItem9=/Game/Dialogue/Interact_Interface
-MRUItem10=/Game/MushroomBoys/Mush4/Mush4
-MRUItem11=/Game/MushroomBoys/Mush3/Mush3
-MRUItem12=/Game/MushroomBoys/Mush2/Mush2_
-MRUItem13=/Game/Gnome_Animated/WinterGnome/Winter_Gnome
-MRUItem14=/Game/Gnome_Animated/SpringGnome/Spring_Gnome
-MRUItem15=/Game/Gnome_Animated/MushGnome/Mush_Gnome
-MRUItem16=/Game/Gnome_Animated/ChefGnome/ChefGnome
-MRUItem17=/Game/Gnome_Animated/FallGnome/Spring_Gnome
-MRUItem18=/Game/Animation/Character/Throw_MC_Anim_mixamo_com
-MRUItem19=/Game/Player/PlayerCharacter
+MRUItem2=/Game/Levels/Bubbleopolis
+MRUItem3=/Game/Blueprints/UI/Widgets/MainMenu
+MRUItem4=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem5=/Game/Bubble_Tree/Bubble_Tree_LP
+MRUItem6=/Game/BookCase/Bookcase
+MRUItem7=/Game/MushroomBoys/Mush1/Mush1
+MRUItem8=/Game/MushroomBoys/Mush5/Mush5
+MRUItem9=/Game/Dialogue/DialogueWidget
+MRUItem10=/Game/Dialogue/Interact_Interface
+MRUItem11=/Game/MushroomBoys/Mush4/Mush4
+MRUItem12=/Game/MushroomBoys/Mush3/Mush3
+MRUItem13=/Game/MushroomBoys/Mush2/Mush2_
+MRUItem14=/Game/Gnome_Animated/WinterGnome/Winter_Gnome
+MRUItem15=/Game/Gnome_Animated/SpringGnome/Spring_Gnome
+MRUItem16=/Game/Gnome_Animated/MushGnome/Mush_Gnome
+MRUItem17=/Game/Gnome_Animated/ChefGnome/ChefGnome
+MRUItem18=/Game/Gnome_Animated/FallGnome/Spring_Gnome
+MRUItem19=/Game/Animation/Character/Throw_MC_Anim_mixamo_com
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -2550,6 +2551,8 @@ Winter_Gnome_C="\"Object.Actor.PivotOffset\" "
 Mush2__C="\"Object.DialogueWidget2\" "
 Mush4_C="\"Object.Actor.PivotOffset\" "
 Mush5_C="\"Object.Actor.PivotOffset\" "
+Forest_C=
+LevelScriptActor=
 
 [AssetEditorToolkitTabLocation]
 /Game/Audio/Bubbleopolis_MAster.Bubbleopolis_Master=1
@@ -2998,7 +3001,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=C:/Users/Tay/Desktop/Sero_Git_/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=../../../../Serotopia2021/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -4567,8 +4570,8 @@ DataTableEditor.TimeStamp=2021.02.06-01.28.01
 DataTableEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/Bubbleopolis
-MRUItem1=/Game/Levels/Forest
+MRUItem0=/Game/Levels/Forest
+MRUItem1=/Game/Levels/Bubbleopolis
 MRUItem2=/Game/Levels/MainMenu
 MRUItem3=/Game/Levels/Sewer
 MRUItem4=/Game/Levels/testYellow
