--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -150,7 +150,7 @@ Synth=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/UI/Widgets
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -203,7 +203,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/Forest
+LastLevel=/Game/Levels/NewSewer
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -212,31 +212,31 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Blueprints/UI/Widgets/HUD6.HUD6
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/UI/Widgets/HUD6
-MRUItem1=/Game/Levels/Forest
-MRUItem2=/Game/Levels/Bubbleopolis
-MRUItem3=/Game/Blueprints/UI/Widgets/MainMenu
-MRUItem4=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem5=/Game/Bubble_Tree/Bubble_Tree_LP
-MRUItem6=/Game/BookCase/Bookcase
-MRUItem7=/Game/MushroomBoys/Mush1/Mush1
-MRUItem8=/Game/MushroomBoys/Mush5/Mush5
-MRUItem9=/Game/Dialogue/DialogueWidget
-MRUItem10=/Game/Dialogue/Interact_Interface
-MRUItem11=/Game/MushroomBoys/Mush4/Mush4
-MRUItem12=/Game/MushroomBoys/Mush3/Mush3
-MRUItem13=/Game/MushroomBoys/Mush2/Mush2_
-MRUItem14=/Game/Gnome_Animated/WinterGnome/Winter_Gnome
-MRUItem15=/Game/Gnome_Animated/SpringGnome/Spring_Gnome
-MRUItem16=/Game/Gnome_Animated/MushGnome/Mush_Gnome
-MRUItem17=/Game/Gnome_Animated/ChefGnome/ChefGnome
-MRUItem18=/Game/Gnome_Animated/FallGnome/Spring_Gnome
-MRUItem19=/Game/Animation/Character/Throw_MC_Anim_mixamo_com
+MRUItem0=/Game/Levels/NewSewer
+MRUItem1=/Game/Blueprints/UI/Widgets/HUD6
+MRUItem2=/Game/Levels/Forest
+MRUItem3=/Game/Levels/Bubbleopolis
+MRUItem4=/Game/Blueprints/UI/Widgets/MainMenu
+MRUItem5=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem6=/Game/Bubble_Tree/Bubble_Tree_LP
+MRUItem7=/Game/BookCase/Bookcase
+MRUItem8=/Game/MushroomBoys/Mush1/Mush1
+MRUItem9=/Game/MushroomBoys/Mush5/Mush5
+MRUItem10=/Game/Dialogue/DialogueWidget
+MRUItem11=/Game/Dialogue/Interact_Interface
+MRUItem12=/Game/MushroomBoys/Mush4/Mush4
+MRUItem13=/Game/MushroomBoys/Mush3/Mush3
+MRUItem14=/Game/MushroomBoys/Mush2/Mush2_
+MRUItem15=/Game/Gnome_Animated/WinterGnome/Winter_Gnome
+MRUItem16=/Game/Gnome_Animated/SpringGnome/Spring_Gnome
+MRUItem17=/Game/Gnome_Animated/MushGnome/Mush_Gnome
+MRUItem18=/Game/Gnome_Animated/ChefGnome/ChefGnome
+MRUItem19=/Game/Gnome_Animated/FallGnome/Spring_Gnome
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -4570,12 +4570,12 @@ DataTableEditor.TimeStamp=2021.02.06-01.28.01
 DataTableEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/Forest
-MRUItem1=/Game/Levels/Bubbleopolis
-MRUItem2=/Game/Levels/MainMenu
-MRUItem3=/Game/Levels/Sewer
-MRUItem4=/Game/Levels/testYellow
-MRUItem5=/Game/Levels/NewSewer
+MRUItem0=/Game/Levels/NewSewer
+MRUItem1=/Game/Levels/Forest
+MRUItem2=/Game/Levels/Bubbleopolis
+MRUItem3=/Game/Levels/MainMenu
+MRUItem4=/Game/Levels/Sewer
+MRUItem5=/Game/Levels/testYellow
 MRUItem6=/Game/Levels/NewMap
 MRUItem7=/Game/Levels/testGreen
 MRUItem8=/Game/Levels/TechDemo
@@ -4585,7 +4585,7 @@ MRUItem11=/Game/Levels/NewWorld
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=MapCheck
+LastLogListing=LoadErrors
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
