--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -150,7 +150,7 @@ Synth=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/UI/Widgets
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -203,7 +203,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/NewSewer
+LastLevel=/Game/Levels/MainMenu
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -212,31 +212,32 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Blueprints/UI/Widgets/HUD6.HUD6
+OpenAssetsAtExit=/Game/Blueprints/UI/Widgets/MainMenu.MainMenu
+OpenAssetsAtExit=/Game/Blueprints/UI/Widgets/Settings.Settings
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/NewSewer
-MRUItem1=/Game/Blueprints/UI/Widgets/HUD6
-MRUItem2=/Game/Levels/Forest
-MRUItem3=/Game/Levels/Bubbleopolis
-MRUItem4=/Game/Blueprints/UI/Widgets/MainMenu
-MRUItem5=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem6=/Game/Bubble_Tree/Bubble_Tree_LP
-MRUItem7=/Game/BookCase/Bookcase
-MRUItem8=/Game/MushroomBoys/Mush1/Mush1
-MRUItem9=/Game/MushroomBoys/Mush5/Mush5
-MRUItem10=/Game/Dialogue/DialogueWidget
-MRUItem11=/Game/Dialogue/Interact_Interface
-MRUItem12=/Game/MushroomBoys/Mush4/Mush4
-MRUItem13=/Game/MushroomBoys/Mush3/Mush3
-MRUItem14=/Game/MushroomBoys/Mush2/Mush2_
-MRUItem15=/Game/Gnome_Animated/WinterGnome/Winter_Gnome
-MRUItem16=/Game/Gnome_Animated/SpringGnome/Spring_Gnome
-MRUItem17=/Game/Gnome_Animated/MushGnome/Mush_Gnome
-MRUItem18=/Game/Gnome_Animated/ChefGnome/ChefGnome
-MRUItem19=/Game/Gnome_Animated/FallGnome/Spring_Gnome
+MRUItem0=/Game/Blueprints/UI/Widgets/Settings
+MRUItem1=/Game/Blueprints/UI/Widgets/MainMenu
+MRUItem2=/Game/Levels/NewSewer
+MRUItem3=/Game/Blueprints/UI/Widgets/HUD6
+MRUItem4=/Game/Levels/Forest
+MRUItem5=/Game/Levels/Bubbleopolis
+MRUItem6=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem7=/Game/Bubble_Tree/Bubble_Tree_LP
+MRUItem8=/Game/BookCase/Bookcase
+MRUItem9=/Game/MushroomBoys/Mush1/Mush1
+MRUItem10=/Game/MushroomBoys/Mush5/Mush5
+MRUItem11=/Game/Dialogue/DialogueWidget
+MRUItem12=/Game/Dialogue/Interact_Interface
+MRUItem13=/Game/MushroomBoys/Mush4/Mush4
+MRUItem14=/Game/MushroomBoys/Mush3/Mush3
+MRUItem15=/Game/MushroomBoys/Mush2/Mush2_
+MRUItem16=/Game/Gnome_Animated/WinterGnome/Winter_Gnome
+MRUItem17=/Game/Gnome_Animated/SpringGnome/Spring_Gnome
+MRUItem18=/Game/Gnome_Animated/MushGnome/Mush_Gnome
+MRUItem19=/Game/Gnome_Animated/ChefGnome/ChefGnome
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -2445,10 +2446,21 @@ Winter_Gnome_C.PlanarMovement=True
 Winter_Gnome_C.MovementComponent=True
 Winter_Gnome_C.Shape=True
 Winter_Gnome_C.Materials=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Accessibility=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Localization=True
+Button.Events=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
-Object=
+Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
 SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 ThirdPersonCharacter_C=
@@ -2509,10 +2521,10 @@ DataAsset="\"Object.SkeletalMeshes\" "
 PlayerCharacter_C="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 PhysicsSettingsCore="\"Object.Replication.PhysicErrorCorrection\" \"Object.Broadphase.DefaultBroadphaseSettings\" \"Object.Broadphase.DefaultBroadphaseSettings.MBPBounds\" \"Object.Broadphase.DefaultBroadphaseSettings.MBPOuterBounds\" \"Object.ChaosPhysics.ChaosSettings\" "
 Image="\"Object.Appearance.Brush\" "
-Widget=
-Visual=
-TextBlock="\"Object.Appearance.Font\" "
-TextLayoutWidget="\"Object.Appearance.Font\" "
+Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
+TextBlock="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 StaticMeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -2553,6 +2565,10 @@ Mush4_C="\"Object.Actor.PivotOffset\" "
 Mush5_C="\"Object.Actor.PivotOffset\" "
 Forest_C=
 LevelScriptActor=
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
+VerticalBox="\"Object.Render Transform.RenderTransform\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Audio/Bubbleopolis_MAster.Bubbleopolis_Master=1
